# bozudon

./: .env  LICENSE  README.md  docker-compose.yaml  nginx.conf  run.sh
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  init-data-dev.sql  init-data-prod.sql  schema.sql
backend/src/: config.rs  entity.rs  main.rs  randstr.rs
backend/src/activitypub/: activity.rs  activitypub.rs  mod.rs  router.rs
backend/src/api_ext/: login.rs
backend/src/api_v1/: apps.rs  favourites.rs  instance.rs  mod.rs  timelines.rs  utils.rs
backend/src/api_v1/accounts/: accounts.rs  follow.rs  mod.rs  router.rs  statuses.rs
backend/src/api_v1/statuses/: mod.rs  router.rs  statuses.rs
backend/src/api_v2/: media.rs  mod.rs  router.rs  search.rs
backend/src/attachments/: attachments.rs  mod.rs
backend/src/model/: account.rs  app.rs  favorite.rs  follow.rs  media.rs  mod.rs  oauth_access_grant.rs  oauth_access_token.rs  prelude.rs  status.rs  user.rs
backend/src/nodeinfo/: mod.rs  nodeinfo.rs
backend/src/oauth/: authorize.rs  mod.rs  router.rs  token.rs  utils.rs
backend/src/router/: mod.rs  root_router.rs
backend/src/storage/: mod.rs
backend/src/well_known/: mod.rs  well_known.rs
frontend/: .env.development  Dockerfile  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/src/app/(home)/: layout.module.css  layout.tsx
frontend/src/app/api/: media.ts  status.ts
frontend/src/app/components/: alert.tsx
frontend/src/app/login/: action.ts  (+2 more)
(+45 files in other folders)
