[package]
name = "bozudon"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.10.0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "postgres-array" ] }
dotenv = "0.15.0"
chrono = "0.4.26"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
actix-web-httpauth = "0.8.0"
rand = "0.8.5"
base64 = "0.21.2"
bcrypt = "0.15.0"
regex = "1.9.0"
lazy_static = "1.4.0"
openssl = "0.10"
actix-cors = "0.6.4"
serde_json = "1.0"
reqwest = "0.11.18"
url = "2.4.0"
sha2 = "0.10.7"
async-recursion = "1.0.4"
actix-multipart = "0.6.0"
uuid = { version = "1.4.0", features = ["v4"] }
mime = "0.3.17"
